{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 448,
  "lineage": "70a2eb0c-7f43-7049-aafe-61a6dd74ce6f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [
                  "inspector-gadget.whitedune-5a500a72.swedencentral.azurecontainerapps.io"
                ],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/backendAddressPools/backend-address-pool",
                "ip_addresses": [],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/backendHttpSettingsCollection/backend-http-settings-https",
                "name": "backend-http-settings-https",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/probes/http-health-probe",
                "probe_name": "http-health-probe",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendIPConfigurations/frontend-public-ip-configuration",
                "name": "frontend-public-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/publicIPAddresses/pip-appgateway",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendPorts/frontend-port-http",
                "name": "frontend-port-http",
                "port": 80
              },
              {
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendPorts/frontend-port-https",
                "name": "frontend-port-https",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/gatewayIPConfigurations/appgateway-ip-configuration",
                "name": "appgateway-ip-configuration",
                "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendIPConfigurations/frontend-public-ip-configuration",
                "frontend_ip_configuration_name": "frontend-public-ip-configuration",
                "frontend_port_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendPorts/frontend-port-http",
                "frontend_port_name": "frontend-port-http",
                "host_name": "azure-container-apps.com",
                "host_names": [],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/httpListeners/listener-http",
                "name": "listener-http",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendIPConfigurations/frontend-public-ip-configuration",
                "frontend_ip_configuration_name": "frontend-public-ip-configuration",
                "frontend_port_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/frontendPorts/frontend-port-https",
                "frontend_port_name": "frontend-port-https",
                "host_name": "azure-container-apps.com",
                "host_names": [],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/httpListeners/listener-https",
                "name": "listener-https",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/sslCertificates/azure-container-apps-com",
                "ssl_certificate_name": "azure-container-apps-com",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.ManagedIdentity/userAssignedIdentities/identity-appgw"
                ],
                "principal_id": "",
                "tenant_id": "",
                "type": "UserAssigned"
              }
            ],
            "location": "swedencentral",
            "name": "appgateway-aca",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/probes/http-health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "http-health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/redirectConfigurations/redirect-configuration",
                "include_path": true,
                "include_query_string": true,
                "name": "redirect-configuration",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/httpListeners/listener-https",
                "target_listener_name": "listener-https",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/httpListeners/listener-http",
                "http_listener_name": "listener-http",
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/requestRoutingRules/request-routing-rule-http",
                "name": "request-routing-rule-http",
                "priority": 100,
                "redirect_configuration_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/redirectConfigurations/redirect-configuration",
                "redirect_configuration_name": "redirect-configuration",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/backendHttpSettingsCollection/backend-http-settings-https",
                "backend_http_settings_name": "backend-http-settings-https",
                "http_listener_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/httpListeners/listener-https",
                "http_listener_name": "listener-https",
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/requestRoutingRules/request-routing-rule-https",
                "name": "request-routing-rule-https",
                "priority": 200,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-spoke1-28",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "",
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/applicationGateways/appgateway-aca/sslCertificates/azure-container-apps-com",
                "key_vault_secret_id": "https://kv-appgw-n3894.vault.azure.net/secrets/azure-container-apps-com",
                "name": "azure-container-apps-com",
                "password": "",
                "public_cert_data": ""
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "name": "appgateway-aca",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_container_app.aca-inspector-gadget",
            "azurerm_container_app_environment.env",
            "azurerm_key_vault.keyvault",
            "azurerm_key_vault_certificate.local_domain_certs",
            "azurerm_public_ip.pip-appgateway",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_role_assignment.role-certificates-officer",
            "azurerm_subnet.snet-spoke1-appgw",
            "azurerm_subnet.snet-spoke2-aca",
            "azurerm_user_assigned_identity.identity-appgw",
            "azurerm_virtual_network.vnet-spoke1",
            "azurerm_virtual_network.vnet-spoke2",
            "data.azurerm_client_config.current",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall-policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/azureFirewalls/firewall"
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "swedencentral",
            "name": "firewall-policy",
            "private_ip_ranges": [],
            "resource_group_name": "rg-hub-28",
            "rule_collection_groups": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group-allow"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "firewall-policy",
            "resource_group_name": "rg-hub-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy-group-allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "allow-all",
                "priority": 400,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "allow-all",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group-allow",
            "name": "policy-group-allow",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "allow-spokes-traffic",
                "priority": 300,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.2.0.0/16"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "allow-spoke1-to-spoke2",
                    "protocols": [
                      "TCP",
                      "UDP",
                      "ICMP",
                      "Any"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.1.0.0/16"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "allow-spoke2-to-spoke1",
                    "protocols": [
                      "TCP",
                      "UDP",
                      "ICMP",
                      "Any"
                    ],
                    "source_addresses": [
                      "10.2.0.0/16"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 1000,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall_policy.firewall-policy",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-spoke1",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/networkInterfaces/nic-vm-spoke1",
            "internal_domain_name_suffix": "ts2bjs3nelwe1pdg2tqh2oshsd.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-ED-8D-3E-F7-5A",
            "name": "nic-vm-spoke1",
            "private_ip_address": "10.1.3.4",
            "private_ip_addresses": [
              "10.1.3.4"
            ],
            "resource_group_name": "rg-spoke1-28",
            "virtual_machine_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Compute/virtualMachines/vm-linux-spoke1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-spoke1",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.snet-spoke1-vm",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/networkInterfaces/nic-vm-spoke2",
            "internal_domain_name_suffix": "suqd52x4ovguhca2xbrosqzr3g.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-ED-8D-AD-09-7B",
            "name": "nic-vm-spoke2",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "rg-spoke2-28",
            "virtual_machine_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Compute/virtualMachines/vm-linux-spoke2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.snet-spoke2-vm",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/networkSecurityGroups/nsg-appgateway",
            "location": "swedencentral",
            "name": "nsg-appgateway",
            "resource_group_name": "rg-spoke1-28",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-all-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-all-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-appgateway",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-all-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/networkSecurityGroups/nsg-appgateway/securityRules/allow-all-inbound",
            "name": "allow-all-inbound",
            "network_security_group_name": "nsg-appgateway",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-spoke1-28",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-all-inbound",
            "network_security_group_name": "nsg-appgateway",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-appgateway",
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/networkSecurityGroups/nsg-appgateway/securityRules/allow-all-outbound",
            "name": "allow-all-outbound",
            "network_security_group_name": "nsg-appgateway",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-spoke1-28",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-all-outbound",
            "network_security_group_name": "nsg-appgateway",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-appgateway",
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.225.203.57",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-bastion",
            "resource_group_name": "rg-hub-28",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/publicIPAddresses/pip-appgateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.165.72.4",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-appgateway",
            "resource_group_name": "rg-spoke1-28",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/publicIPAddresses/pip-firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "9.223.113.165",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-firewall",
            "resource_group_name": "rg-hub-28",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-internet-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1/routes/route-to-internet-spoke1",
            "name": "route-to-internet-spoke1",
            "next_hop_in_ip_address": "",
            "next_hop_type": "Internet",
            "resource_group_name": "rg-spoke1-28",
            "route_table_name": "route-table-to-nva-spoke1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-to-internet-spoke1",
            "resource_group_name": "rg-spoke1-28",
            "route_table_name": "route-table-to-nva-spoke1",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-to-nva-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-nva-spoke1-aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/24",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1/routes/route-to-nva-spoke1-aca",
            "name": "route-to-nva-spoke1-aca",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke1-28",
            "route_table_name": "route-table-to-nva-spoke1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-to-nva-spoke1-aca",
            "resource_group_name": "rg-spoke1-28",
            "route_table_name": "route-table-to-nva-spoke1",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_firewall_policy.firewall-policy",
            "azurerm_public_ip.pip-firewall",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-to-nva-spoke1",
            "azurerm_subnet.snet-firewall",
            "azurerm_subnet.snet-spoke2-aca",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-nva-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2/routes/route-to-nva-spoke2",
            "name": "route-to-nva-spoke2",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke2-28",
            "route_table_name": "route-table-to-nva-spoke2",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-to-nva-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "route_table_name": "route-table-to-nva-spoke2",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_firewall_policy.firewall-policy",
            "azurerm_public_ip.pip-firewall",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-to-nva-spoke2",
            "azurerm_subnet.snet-firewall",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-to-nva-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1",
            "location": "swedencentral",
            "name": "route-table-to-nva-spoke1",
            "resource_group_name": "rg-spoke1-28",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-internet-spoke1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "10.2.0.0/24",
                "name": "route-to-nva-spoke1-aca",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw",
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-vm"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-table-to-nva-spoke1",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-to-nva-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2",
            "location": "swedencentral",
            "name": "route-table-to-nva-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-nva-spoke2",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-table-to-nva-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-28",
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "rg-hub-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-28",
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-hub-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke1-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Network/applicationGateways"
                  }
                ]
              }
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw",
            "name": "snet-spoke1-appgw",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke1-28",
            "virtual_network_name": "vnet-spoke1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-spoke1-appgw",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke1-pe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-pe",
            "name": "snet-spoke1-pe",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke1-28",
            "virtual_network_name": "vnet-spoke1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-spoke1-pe",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke1-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-vm",
            "name": "snet-spoke1-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke1-28",
            "virtual_network_name": "vnet-spoke1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-spoke1-vm",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke2-aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
            "name": "subnet-spoke2-workload",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke2-28",
            "virtual_network_name": "vnet-spoke2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-spoke2-workload",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke2-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
            "name": "subnet-spoke2-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke2-28",
            "virtual_network_name": "vnet-spoke2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-spoke2-vm",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "association-nsg-snet-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw",
            "network_security_group_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/networkSecurityGroups/nsg-appgateway",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg-appgateway",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.snet-spoke1-appgw",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_route_table_snet_spoke1_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw",
            "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-to-nva-spoke1",
            "azurerm_subnet.snet-spoke1-appgw",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_route_table_snet_spoke1_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-vm",
            "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-to-nva-spoke1",
            "azurerm_subnet.snet-spoke1-vm",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_route_table_subnet_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
            "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-to-nva-spoke2",
            "azurerm_subnet.snet-spoke2-aca",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1ceab166-c661-4b67-8f2d-246c4105b801",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "swedencentral",
            "name": "vnet-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-hub-28",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.1.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-hub",
            "resource_group_name": "rg-hub-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cb14b89c-22ad-4dec-bc66-e4e07e3a4793",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1",
            "location": "swedencentral",
            "name": "vnet-spoke1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-spoke1-28",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.Network/applicationGateways"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-appgw",
                "name": "snet-spoke1-appgw",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1",
                "security_group": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/networkSecurityGroups/nsg-appgateway"
              },
              {
                "address_prefixes": [
                  "10.1.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-pe",
                "name": "snet-spoke1-pe",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.1.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/snet-spoke1-vm",
                "name": "snet-spoke1-vm",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-spoke1",
            "resource_group_name": "rg-spoke1-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f23f2095-75fe-434d-881c-b862e94331ee",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "location": "swedencentral",
            "name": "vnet-spoke2",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-spoke2-28",
            "subnet": [
              {
                "address_prefixes": [
                  "10.2.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
                "name": "subnet-spoke2-workload",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2"
              },
              {
                "address_prefixes": [
                  "10.2.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
                "name": "subnet-spoke2-vm",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-hub-to-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet-peering-hub-to-spoke1",
            "name": "vnet-peering-hub-to-spoke1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1",
            "resource_group_name": "rg-hub-28",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-hub-to-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet-peering-hub-to-spoke2",
            "name": "vnet-peering-hub-to-spoke2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "resource_group_name": "rg-hub-28",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-spoke1-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke1-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/virtualNetworkPeerings/vnet-peering-spoke1-to-hub",
            "name": "vnet-peering-spoke1-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke1-28",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-spoke2-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/virtualNetworkPeerings/vnet-peering-spoke2-to-hub",
            "name": "vnet-peering-spoke2-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke2-28",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    }
  ]
}